# rl-research

./: .gitignore  .pre-commit-config.yaml  README.md  double_goright_rmax_dtp_sweep_summary.csv  doublegoright_ucb_dtp_summary.csv  hpo_originalobs.csv  job.sh  plot.py  pyproject.toml  riverswim_rmax_dtp_sweep_summary.csv  riverswim_ucb_dtp_sweep_summary.csv  sixarms_rmax_dtp_sweep_summary.csv  sixarms_ucb_dtp_sweep_summary.csv  test.ipynb
docs/: architecture.md  rmax_animation.tsx  run_catalog.md
dqn_rnd_analysis/: __init__.py  analysis.py  dqn_rnd_analysis.py  logger.py  networks.py  plot_visitation_vs_intrinsic.py  replay_buffer.py
examples/: doublegoright_mcts.py  doublegoright_mcts_hpo.py  doublegoright_mcts_rmax.py  doublegoright_mcts_rmax_hpo.py  doublegoright_qlearning.py  doublegoright_rmax.py  doublegoright_rmax_dtp.py  doublegoright_rmax_ucbpolicy_dtp.py  doublegoright_ucb_dtp.py  hpo_doublegoright_fullyobs_ucb_dtp.py  hpo_doublegoright_lambda_dtp.py  hpo_doublegoright_rmax_dtp.py  hpo_doublegoright_ucb_dtp.py  hpo_riverswim_rmax_dtp.py  hpo_riverswim_ucb_dtp.py  hpo_sixarms_rmax_dtp.py  hpo_sixarms_ucb_dtp.py  plot_agent_states.py  riverswim_mbie.py  riverswim_mbieeb.py  riverswim_rmax.py  riverswim_rmax_dtp.py  riverswim_ucb_dtp.py  sixarms_mbie.py  sixarms_mbieeb.py  sixarms_rmax.py
results/hpo/navix/: hpo_16x16_onehot_linear.csv  hpo_5x5_onehot_linear.csv  hpo_dqn_drm_onehot.csv  hpo_nfq_onehot.csv  hpo_nfq_onehottabular.csv
results/hpo/pacmdp/: countbased_intrinsicreward.csv  riverswim__countbased_intrinsicreward__best_configs.csv  riverswim__countbased_intrinsicreward__hyperparameter_stats.csv  sixarms__countbased_intrinsicreward__best_configs.csv  sixarms__countbased_intrinsicreward__hyperparameter_stats.csv
rl_research/: __init__.py  buffers.py  cli.py  debug_logging.py  dqn_runner.py  experiment.py  main.py  policies.py  utils.py
rl_research/agents/: __init__.py  _deprecated_mcts.py  _dqn_common.py  annealing_epsgreedy_count.py  base.py  batch_modelfree_mbieeb.py  batch_modelfree_rmax.py  bbi.py  delayed_qlearning.py  dqn.py  dqn_rmax.py  dqn_rmax_rnd.py  dqn_rnd.py  dqn_rnd_ucb.py  drm.py  dt_lambda_planner.py  dt_nstep_planner.py  dt_planner.py  dt_rmax_planner.py  dt_rmax_ucbpolicy_planner.py  dt_ucb_planner.py  expectation_models.py  factored_rmax.py  mbie.py  mbieeb.py  mcts.py  mve.py  nfq.py  optimistic_batch_montecarlo.py  optimistic_batch_qlearning.py  optimistic_qlearning.py  q_learning.py  qlearning.py  rmax.py  rmax_buffer.py  rmax_mcts.py  rmax_nfq.py  utils.py
rl_research/agents/tabular/: __outdated__delayed_qlearning.py  mbieeb.py  qlearning.py  replaybased_mbieeb.py  replaybased_rmax.py  rmax.py
rl_research/analysis/: __init__.py  navix_knownness_collection.py  navix_knownness_plotting.py
rl_research/conf/: config.yaml
rl_research/conf/env/: doublegoright.yaml  doublegoright_fullobs.yaml  riverswim.yaml  sixarms.yaml
rl_research/conf/experiment/: default.yaml  goright.yaml  sixarms.yaml
rl_research/conf/run/: doublegoright_fullyobs_mcts_empirical.yaml  doublegoright_fullyobs_mcts_handcoded.yaml  doublegoright_fullyobs_mcts_handcoded_sweep.yaml  doublegoright_fullyobs_mcts_rmax_empirical.yaml  doublegoright_fullyobs_mcts_rmax_empirical_sweep.yaml  doublegoright_fullyobs_mcts_rmax_handcoded.yaml  doublegoright_fullyobs_qlearning.yaml  (+18 more)
rl_research/config/: config.yaml
rl_research/configs/: README.md  qlearning_doublegoright.gin
rl_research/core/: experiment.py  stats.py  types.py
rl_research/dispatch/: base.py  compute_canada.py  local.py  sweeps.py
rl_research/environments/: __init__.py  base.py  goright.py  navix.py  tabular_minigrid.py  tabular_navix.py
rl_research/envs/: __init__.py  base.py
rl_research/examples/: __init__.py  runner.py
rl_research/experiment/: __init__.py  experiment.py
rl_research/models/: __init__.py  expectation_models.py  handcoded_expectation_models.py  tabular.py
rl_research/policies/: __init__.py
rl_research/tracking/: base.py  mlflow.py
rl_research/utils/: importing.py
rl_research/visualization/: plot.py
scripts/: README.md  analize_hpo_results.py  analyze_navix_empty_knownness.py  benchmark_goright.py  benchmark_minigrid.py  benchmark_navix.py  dispatch_local_jobs.py  export.sh  export_hpo_results.py  export_navix_layout.py  interactive_env.py  job.sh  make_sweep.py  migrate_mlflow_store.py  mlruns_archive.sh  mlruns_sync_cc.sh  packed_runs_job.sh  parallel_seeds_job.sh  play_goright.py  plot_agent_states.py  plot_bonus_vs_visitation_from_logs.py  plot_experiment_metrics.py  plot_learning_curves.py  plot_training.py  run_local_seeds.py  run_packed_job.py  run_parallel_seeds.py  single_seed_job.sh  submit_packed_runs.py  submit_sweep.py  train_dqn_dopamine.py  train_rb_rmax_navix.py  train_rmax_minigrid.py  train_rmax_navix.py
scripts/benchmarking/: benchmark_design_pattern.py  benchmark_navix.py
tests/: test_experiment_runner.py
tmp/: goright_transitions_f501e5ac0c9d85ac48542d785735f6cc.npz  hpo_output.csv
(+315 files in other folders)
