[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-research"
version = "0.1.0"
description = "Hydra-driven tabular reinforcement-learning research sandbox with JAX agents and MLflow logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax==0.5.0",
    "mlflow>=2.8.0",
    "numpy==2.3.3",
    "gin-config>=0.5.0",
    "gymnasium",
    "plotly>=6.3.1",
    "flax>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2.0",
]

[tool.black]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["rl_research/"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

[tool.setuptools]
py-modules = ["rl_research"]

[tool.pyright]
include = ["rl_research/**"]
exclude = ["tests/**", "**/node_modules", "**/__pycache__", "outputs/**"]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

[tool.uv.sources]
gymnasium = { git = "https://github.com/cruz-lucas/Gymnasium.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
