[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-research"
version = "0.1.0"
description = "Tabular reinforcement-learning research sandbox with JAX agents and MLflow logging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax==0.5.0",
    "mlflow==3.6.0",
    "numpy==2.3.3",
    "gin-config==0.5.0",
    "gymnasium",
    "plotly==6.5.0",
    "flax==0.10.4",
    "nbformat==5.10.4",
    "tyro==0.9.35",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
pygame = [
    "pygame>=2.6.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["rl_research", "scripts"]
extend-exclude = ["outputs", "tmp", "mlruns_db_store", "mlruns_sqlite_artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["rl_research"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools]
py-modules = ["rl_research"]

[tool.pyright]
include = ["rl_research/**"]
exclude = ["tests/**", "**/node_modules", "**/__pycache__", "outputs/**"]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

[tool.uv.sources]
gymnasium = { git = "https://github.com/cruz-lucas/Gymnasium.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
